# Evil_QOS

./: Cargo.toml
SE_Content/: Recommendations.md  Reqirments.md  flow.puml  specs.txt  structure.txt
src/: check_sudo.rs  cli.rs  main.rs
src/common/: globals.rs  mod.rs
src/console/: banner.rs  chart.rs  io.rs  mod.rs  shell.rs
src/limiter/: mod.rs  qos.rs
src/menus/: main_menu.rs  menu.rs  mod.rs  parser.rs
src/network/: arp.rs  discovery.rs  mod.rs
src/networking/: host.rs  limit.rs  mod.rs  monitor.rs  scan.rs  spoof.rs  utils.rs  watch.rs
